# kleinanzeigen-profile-automation

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: LOGIN_POLICY.md  MAINTAINER_WORKFLOWS.md  PRIVACY_AUDIT.md  USAGE_DE.md
examples/: listings.example.json
scripts/: secret_scan.py
src/kpa/: __init__.py  browser.py  cli.py  filler.py  login_guard.py  models.py
tests/: test_login_guard.py  test_models.py
